# Media-Organizer

./: BrowsingHistory.cpp  BrowsingHistory.h  CMakeLists.txt  DirProcessor.cpp  FavoritFoldersModel.cpp  FavoritFoldersModel.h  README.md  ThumbData.h  ThumbsModel.cpp  ThumbsModel.h  ThumbsProvider.cpp  ThumbsViewState.h  main.cpp  qml.qrc
Browsing/: BrowsingBackForward.h  BrowsingBase.cpp  BrowsingBase.h  BrowsingHistory.cpp  BrowsingNavigation.h  BrowsingParentFolder.h
Qml/: AddFolder.qml  BigToolButton.qml  FavoriteFolders.qml  FavoriteFoldersMenu.qml  Style.qml  ThumbsGrid.qml  main.qml  qml.qrc
Src/: ComponentsMediator.cpp  ComponentsMediator.h  DirProcessor.cpp  DirProcessor.h  DiskOperations.cpp  DiskOperations.h  FavoritFoldersModel.cpp  FavoriteFolderData.h  ThumbData.h  ThumbsDiskCacher.cpp  ThumbsDiskCacher.h  ThumbsModel.cpp  ThumbsModel.h  ThumbsProvider.h  ThumbsProviderInterface.h  ThumbsViewState.cpp  main.cpp
Src/Browsing/: BrowsingBackForward.cpp  BrowsingHistory.h  BrowsingParentFolder.cpp  BrowsingPrevNextFolder.cpp  BrowsingPrevNextFolder.h
Src/ThumbGenerators/: VideoThumbnailGeneratorFactory.h  VideoThumbnailGeneratorInterface.h  VideoThumbnailGeneratorWin32.cpp  VideoThumbnailGeneratorWin32.h
Test/: CMakeLists.txt
Test/DirProcessorTest/: DirProcessorTest.cpp
ThumbGenerators/: VideoThumbnailGeneratorWin32.h
